fix: removed extra padding

--- a/src/components/product-view/ProductView.module.css
+++ b/src/components/product-view/ProductView.module.css
@@ -6,7 +6,7 @@
 .container {
   max-width: 1170px;
   margin: 50px auto;
-  padding-bottom: 50pc;
+  padding-bottom: 50px;
 }
 
 img {
